# cashflow_app

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml  run
.github/: copilot-instructions.md
.github/agents/: db.agent.md  db_access.agent.md  textual-ui.agent.md
.github/instructions/: cashflow.instruction.md  python.instructions.md
.github/instructions/cashflow/: python.instructions.md
.github/instructions/cashflow/data/db/: data_access.instructions.md  entities.instructions.md
.github/instructions/tests/data/: data_access.instructions.md  entities.instructions.md
.github/workflows/: cashflow-main-build.yml  python-main.yml
cashflow/: __main__.py  app.py  app_config.py  app_container.py  app_paths.py
cashflow/config/: _paths.py  _project_config.py  _runtime_config.py  config.py  default.yml
cashflow/data/: csvhandler.py  xlshandler.py
cashflow/data/csv/: csvhandler.py
cashflow/data/db/: __init__.py  data_access.py  database.py  db_engine.py  entities.py  migration.py
cashflow/data/db/migrations/: __init__.py  env.py
cashflow/data/db/migrations/versions/: revision_2025_08_09_initial_revision.py
cashflow/screens/: modalscreen.py
cashflow/widgets/: dataframetable.py
scripts/: third_party_licenses.sh
tests/: app_config_test.py  conftest.py
tests/data/db/: database_test.py  transcation_data_access_test.py
tests/data/db/data_access/: budget_data_access_test.py  category_data_access_test.py  transaction_data_access_test.py
tests/data/db/entities/: budget_entity_test.py  transaction_entity_test.py
