[project]
name = "cashflow"
version = "0.1.0"
readme = "README.md"
description = "A tool to analyse bank transactions and track your expenses and income."
authors = [
    { name = "Leo Huber", email = "leo_huber@icloud.com" }
]
license = "GPL-3.0-only"
dependencies = [
    "textual==2.1.2",
    "pydantic>=2.10.6",
    "pandas>=2.2.3",
]
requires-python = ">= 3.13"

[project.scripts]
cashflow = "cashflow:__main__.main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 150

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D"]

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = [
    # at least this three should be fine in tests:
    "S101", # asserts allowed in tests...
    "ARG", # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT", # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    # The below are debateable
    "PLR2004", # Magic value used in comparison, ...
    "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
    "INP001"
]

[tool.uv]
managed = true
dev-dependencies = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "textual-dev>=1.7.0",
    "ruff>=0.11.1",
    "pytest>=8.3.5",
    "pip-licenses>=5.0.0",
]

[tool.pyright]
typeCheckingMode = "standard"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["cashflow"]
exclude = [
  "/.github",
  "/tests",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
#norecursedirs = "tests/test_utils"
testpaths = [
    "tests"
]

[tool.pip-licences]
from = "mixed"
format = "markdown"
output-file = "THIRD_PARTY_LICENSES.md"
ignore-packages = [
  "scipy"
]
