[project]
name = "cashflow"
version = "0.1.0"
readme = "README.md"
description = "A tool to analyse bank transactions and track your expenses and income."
authors = [
    { name = "Leo Huber", email = "leo_huber@icloud.com" }
]
license = "GPL-3.0-only"
dependencies = [
    "textual==8.2.3",
    "pydantic==2.12.5",
    "pandas==3.0.2",
    "click==8.3.2",
    "sqlalchemy==2.0.49",
    "alembic==1.18.4",
    "dependency-injector==4.49.0"
]
requires-python = ">= 3.14"

[project.scripts]
cashflow = "cashflow:__main__.main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 150

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D"]

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = [
    # at least this three should be fine in tests:
    "S101", # asserts allowed in tests...
    "ARG", # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT", # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    # The below are debateable
    "PLR2004", # Magic value used in comparison, ...
    "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
    "INP001"
]

[tool.uv]
managed = true

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "textual-dev>=1.7.0",
    "ruff>=0.11.1",
    "pytest>=8.3.5",
    "pip-licenses>=5.0.0",
]

[tool.pyright]
typeCheckingMode = "standard"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["cashflow"]
exclude = [
  "/.github",
  "/tests",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
#norecursedirs = "tests/test_utils"
testpaths = [
    "tests"
]

[tool.pip-licences]
from = "mixed"
format = "markdown"
output-file = "THIRD_PARTY_LICENSES.md"
ignore-packages = [
  "scipy"
]

[tool.alembic]
# path to migration scripts
script_location = "cashflow/data/db/migrations"

# template used to generate migration file names
file_template = "revision_%%(year)d_%%(month).2d_%%(day).2d_%%(slug)s"

# additional paths to be prepended to sys.path
prepend_sys_path = "."

# timezone to use when rendering the date within the migration file
timezone = "UTC"

# max length of characters to apply to the "slug" field
truncate_slug_length = "40"

# set to 'true' to run the environment during the 'revision' command
revision_environment = "false"

# set to 'true' to allow .pyc and .pyo files without a source .py file
sourceless = "false"

# version location specification
# version_locations = "luna_app/db/migrations/versions"

# set to 'true' to search source files recursively
recursive_version_locations = "false"

# output encoding used when revision files are written
output_encoding = "utf-8"

# Post-write hooks for code formatting
[[tool.alembic.post_write_hooks]]
name = "ruff_format"
type = "exec"
executable = ".venv/bin/ruff"
options = "format REVISION_SCRIPT_FILENAME"

[[tool.alembic.post_write_hooks]]
name = "ruff_check"
type = "exec"
executable = ".venv/bin/ruff"
options = "check --fix REVISION_SCRIPT_FILENAME"

